--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   },
   "author": "Jonathan Palardy",
   "readmeFilename": "README.md",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "eslint": "7.7.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-plugin-import": "2.22.0"
+  }
 }
