Update eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@ rules:
   comma-dangle: ["error", "always-multiline"]
   func-names: ["error", "as-needed"]
   space-before-function-paren: "off"
-  arrow-parens: ["error", "as-needed"]
+  arrow-parens: "off"
   arrow-body-style: "off"
   max-len: ["warn", 150]
   generator-star-spacing: "off"
@@ -14,7 +14,5 @@ rules:
   class-methods-use-this: "off"
   object-curly-newline: ["error", {"multiline": true}]
 env:
-  es6: true
   browser: true
 extends: airbnb-base
-// npm install eslint-config-airbnb-base
